updated naming to lowercase

--- a/Ironcrunch/src/html/Ironcrunch.html
+++ b/Ironcrunch/src/html/Ironcrunch.html
@@ -100,7 +100,7 @@
     </div>
   </div>
 </div>
-<div class="sheet-ironsworn-nav-bar-pages">
+<div class="sheet-nav-bar">
   <div class="sheet-nav-child">
     <label for="sheet-summary">Summary</label>
   </div>
@@ -111,38 +111,38 @@
     <label for="sheet-bonds">Bonds</label>
   </div>
 </div>
-<input class="sheet-hide sheet-ironcrunch-summary" type="radio" name="attr_ironcrunch-page" id="sheet-summary" value="1" checked="checked"/>
-<div class="sheet-ironcrunch-summary sheet-hide">
+<input class="sheet-hide sheet-summary" type="radio" name="attr_ironcrunch-page" id="sheet-summary" value="1" checked="checked"/>
+<div class="sheet-summary sheet-hide">
   <div class="sheet-stats">
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
       <h3 class="sheet-stats-title">EDGE</h3>
       <input class="sheet-stats-input" type="text" name="attr_edge" placeholder="grace" value=""/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Heart" name="rollHeart" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +heart}} {{action=[[1d6+@{heart}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Heart" name="rollHeart" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +heart}} {{action=[[1d6+@{heart}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
       <h3 class="sheet-stats-title">HEART</h3>
       <input class="sheet-stats-input" type="text" name="attr_heart" placeholder="soul" value=""/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Iron" name="rollIron" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Iron" name="rollIron" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
       <h3 class="sheet-stats-title">IRON</h3>
       <input class="sheet-stats-input" type="text" name="attr_iron" placeholder="body" value=""/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Shadow" name="rollShadow" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Shadow" name="rollShadow" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
       <h3 class="sheet-stats-title">SHADOW</h3>
       <input class="sheet-stats-input" type="text" name="attr_shadow" placeholder="guile" value=""/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Wits" name="rollWits" value="&amp;{template:Ironcrunch} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Wits" name="rollWits" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
       <h3 class="sheet-stats-title">WITS</h3>
       <input class="sheet-stats-input" type="text" name="attr_wits" placeholder="mind" value=""/>
     </div>
   </div>
 </div>
-<input class="sheet-hide sheet-ironcrunch-bonds" type="radio" name="attr_ironcrunch-page" id="sheet-bonds" value="2"/>
-<div class="sheet-ironcrunch-bonds sheet-hide">
+<input class="sheet-hide sheet-bonds" type="radio" name="attr_ironcrunch-page" id="sheet-bonds" value="2"/>
+<div class="sheet-bonds sheet-hide">
   <div class="sheet-bonds-track">
     <div>
       <select class="sheet-progress-input" name="attr_bond-0">
@@ -226,10 +226,10 @@
     </div>
   </div>
 </div>
-<input class="sheet-hide sheet-ironcrunch-vows" type="radio" name="attr_ironcrunch-page" id="sheet-vows" value="3"/>
-<div class="sheet-ironcrunch-vows sheet-hide">
-  <input class="sheet-hide sheet-vows-Ironcrunch-mode-page" type="checkbox" name="attr_vows_ironsworn_mode_page" id="vows-Ironcrunch-mode-page"/>
-  <div class="sheet-vows-Ironcrunch-mode-page">
+<input class="sheet-hide sheet-vows" type="radio" name="attr_ironcrunch-page" id="sheet-vows" value="3"/>
+<div class="sheet-vows sheet-hide">
+  <input class="sheet-hide sheet-vows-ironcrunch-mode-page" type="checkbox" name="attr_vows_ironsworn_mode_page" id="vows-ironcrunch-mode-page"/>
+  <div class="sheet-vows-ironcrunch-mode-page">
     <div class="sheet-vows">
       <fieldset class="repeating_vow">
         <input class="sheet-vow-name" type="text" name="attr_vow_name"/>
@@ -326,7 +326,7 @@
                 <option value="3">*</option>
                 <option value="4">#</option>
             </select>
-            <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:Ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
+            <button type="roll" title="Fulfill your Vow" name="rollVow" value="&amp;{template:ironcrunch} {{header=@{character_name} &lt;em&gt;Fulfill Your Vow&lt;/em&gt; }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}">              </button>
             <input class="sheet-hide" type="text" name="attr_vow-filled" value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)" disabled="disabled"/>
           </div>
           <div class="sheet-threat-row">
