Added Tome of Mysteries moves
Added special luck moves from the Tome of Mysteries revisions including translation tags

--- a/Monster of the Week/MotWHTML.html
+++ b/Monster of the Week/MotWHTML.html
@@ -378,6 +378,7 @@
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine5">
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine6">
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i>(added with Tome of Mysteries) <span data-i18n="luck-special-divine">When you spend <i>Luck</i> you get word your Mission requires something difficut to me done. By you. Urgently</span>
                         </div><br>
                         <div class="sheet-Harm-Divine"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Divine" name="attr_Harm-Divine1">
@@ -497,6 +498,7 @@
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert5">
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert6">
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-expert">When you spend <i>Luck</i> you discover something happening now is related to something you were involved in years ago</span>
                         </div><br>
                         <div class="sheet-Harm-Expert"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Expert" name="attr_Harm-Expert1">
@@ -626,6 +628,7 @@
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake5">
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake6">
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (Added with Tome of Mysteries) <span data-i18n="luck-special-flake">When you spend <i>Luck</i> pick an aspect of the current situation. The Keeper will tell you what other conspiricies that aspect connects to</span>
                         </div><br>
                         <div class="sheet-Harm-Flake"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Flake" name="attr_Harm-Flake1">
@@ -748,6 +751,7 @@
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate5">
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate6">
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-initiate">When you spend <i>Luck</i> something goes wrong for your Sect: an ill-advised project or a disasterous operation</span>
                         </div><br>
                         <div class="sheet-Harm-Initiate"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Initiate" name="attr_Harm-Initiate1">
@@ -916,6 +920,7 @@
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous5">
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous6">
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-monsterous">When you spend <i>Luck</i> your monster side gains power. Your Curse may grow stronger, or another Breed disadvantage may manifest</span>
                         </div><br>
                         <div class="sheet-Harm-Monsterous"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Monsterous" name="attr_Harm-Monsterous1">
@@ -1054,6 +1059,7 @@
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane5">
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane6">
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-mundane">When you spend <i>Luck</i> you'll find something wierd- maybe even useful</span>
                         </div><br>
                         <div class="sheet-Harm-Mundane"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Mundane" name="attr_Harm-Mundane1">
@@ -1181,6 +1187,7 @@
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional5">
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional6">
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-professional">When you spend <i>Luck</i> your next mission from the Agency comes with lots of red tape. Lots</span>
                         </div><br>
                         <div class="sheet-Harm-Professional"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Professional" name="attr_Harm-Professional1">
@@ -1336,6 +1343,7 @@
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger5">
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger6">
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-spellslinger">When you spend <i>Luck</i> the official council of wizards is going to poke their nose into your business</span>
                         </div><br>
                         <div class="sheet-Harm-Spellslinger"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Spellslinger" name="attr_Harm-Spellslinger1">
@@ -1475,7 +1483,7 @@
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky5">
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky6">
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky7"> <span data-i18n="doomed">Doomed</span><br></p>
-                        <i><span data-i18n="special">Special</span>:</i> <span data-i18n="luck-special-Spooky">As you spend <i>Luck</i> your Dark Side's needs will get nastier</span>
+                        <i><span data-i18n="special">Special</span>:</i> <span data-i18n="luck-special-spooky">As you spend <i>Luck</i> your Dark Side's needs will get nastier</span>
                         </div><br>
                         <div class="sheet-Harm-Spooky"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Spooky" name="attr_Harm-Spooky1">
@@ -1624,6 +1632,7 @@
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged5">
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged6">
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged7"> <span data-i18n="doomed">Doomed</span><br></p>
+                        <i><span data-i18n="special">Special</span>:</i> (added with Tome of Mysteries) <span data-i18n="luck-special-wronged">When you spend <i>Luck</i> you find a dangerous lead on your prey</span>
                         </div><br>
                         <div class="sheet-Harm-Wronged"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Wronged" name="attr_Harm-Wronged1">
