- Sorted styles to be in order based on their length
- Added extra parenthesis for hit and damage calculations
- Fixed a few spelling errors

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -1458,7 +1458,7 @@
             <td><input type="text" name="attr_attacknum" title="@{attacknum}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj" title="@{attackadj}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC0" title="@{ThAC0}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit1" title="%{hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+[[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]])]] using their @{weaponname}">Hit</button></td>
+            <td><button type="roll" name="roll_hit1" title="%{hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+([[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]]))]] using their @{weaponname}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh" title="@{crit-thresh}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range" title="@{range}" class="sheet-short"></td>
             <td><input type="text" name="attr_size" title="@{size}" class="sheet-small"></td>
@@ -1488,13 +1488,13 @@
             <th class="sheet-default-header" colspan="2" >Speed</th>
     </tr>
     <tr>
-            <td class="sheet-centering"><input type='checkbox' name='attr_strbonus' title="@{repeating_weapons_$X_dexbonus}" value='1' checked /><span></span></td>
+            <td class="sheet-centering"><input type='checkbox' name='attr_strbonus' title="@{repeating_weapons_$X_strbonus}" value='1' checked /><span></span></td>
             <td><input type="text" name="attr_weaponname" title="@{repeating_weapons_$X_weaponname}" class="sheet-middle"></td>
             <td class="sheet-centering"><input type="checkbox" name="attr_specialist-attack" title="@{repeating_weapons_$X_specialist-attack}" value="1"/><span></span></td>
             <td><input type="text" name="attr_attacknum" title="@{repeating_weapons_$X_attacknum}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj" title="@{repeating_weapons_$X_attackadj}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC0" title="@{repeating_weapons_$X_ThAC0}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit1" title="%{repeating_weapons_$X_hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+[[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]])]] using their @{weaponname}">Hit</button></td>
+            <td><button type="roll" name="roll_hit1" title="%{repeating_weapons_$X_hit1}" value="/em hits an AC of [[@{ThAC0}-(1d20cs>@{crit-thresh}+([[(@{attackadj})+(@{specialist-attack})+((@{strengthhit})*@{strbonus})+(@{banded-mail})+(@{brigandine})+(@{chainmail-bronzeplate})+(@{field-plate})+(@{full-plate})+(@{leather-hide-padded})+(@{plate-mail})+(@{ring-mail})+(@{scale-mail})+(@{splint-mail})+(@{studded-leather})+(?{Misc. bonus|0})]]))]] using their @{weaponname}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh" title="@{repeating_weapons_$X_crit-thresh}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range" title="@{repeating_weapons_$X_range}" class="sheet-short"></td>
             <td><input type="text" name="attr_size" title="@{repeating_weapons_$X_size}" class="sheet-small"></td>
@@ -1527,9 +1527,9 @@
             <td class="sheet-centering"><input type="checkbox" name="attr_specialist-damage" title="@{specialist-damage}" value="2"/><span></span></td>
             <td><input type="text" name="attr_damadj" title="@{damadj}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_damsm" title="@{damsm}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm" title="%{attacksm}" value="/em rolls [[@{damsm}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attacksm" title="%{attacksm}" value="/em rolls [[@{damsm}+([[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]])]] damage using their @{weaponname1}!"></button></td>
             <td><input type="text" name="attr_daml" title="@{daml}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl" title="%{attackl}" value="/em rolls [[@{daml}+[[(@{damadj})+(@{specialist-damage})+(@{mastery-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attackl" title="%{attackl}" value="/em rolls [[@{daml}+([[(@{damadj})+(@{specialist-damage})+(@{mastery-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]])]] damage using their @{weaponname1}!"></button></td>
     </tr>
     </table>
 <fieldset name="repeating_weapons" title="@{weapons-damage}" class="repeating_weapons-damage">
@@ -1549,9 +1549,9 @@
             <td class="sheet-centering"><input type="checkbox" name="attr_specialist-damage" title="@{repeating_weapons-damage_$X_specialist-damage}" value="2"/><span></span></td>
             <td><input type="text" name="attr_damadj" title="@{repeating_weapons-damage_$X_damadj}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_damsm" title="@{repeating_weapons-damage_$X_damsm}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm" title="%{repeating_weapons-damage_$X_attacksm}" value="/em rolls [[@{damsm}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attacksm" title="%{repeating_weapons-damage_$X_attacksm}" value="/em rolls [[@{damsm}+([[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]])]] damage using their @{weaponname1}!"></button></td>
             <td><input type="text" name="attr_daml" title="@{repeating_weapons-damage_$X_daml}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl" title="%{repeating_weapons-damage_$X_attackl}" value="/em rolls [[@{daml}+[[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]]]] damage using their @{weaponname1}!"></button></td>
+            <td><button type="roll" name="roll_attackl" title="%{repeating_weapons-damage_$X_attackl}" value="/em rolls [[@{daml}+([[(@{damadj})+(@{specialist-damage})+((@{strengthdmg})*@{strbonus1})+(?{Misc. bonus|0})]])]] damage using their @{weaponname1}!"></button></td>
     </tr>
 </table>
 </fieldset>
@@ -1636,7 +1636,7 @@
     </tr>
     <tr>
             <th class="sheet-default-header" title="Specialist Point Blank: +2">PB</th>
-            <th class="sheet-default-header" title="Short Range: -0">SR</th>
+            <th class="sheet-default-header" title="Short Range: 0">SR</th>
             <th class="sheet-default-header" title="Medium Range: -2">MR</th>
             <th class="sheet-default-header" title="Long Range: -5">LR</th>
             <th class="sheet-default-header" title="Slashing">S</th>
@@ -1654,7 +1654,7 @@
             <td><input type="text" name="attr_attacknum2" title="@{attacknum2}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj2" title="@{attackadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{ThAC02}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+[[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]])]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{size2}" class="sheet-small"></td>
@@ -1698,7 +1698,7 @@
             <td><input type="text" name="attr_attacknum2" title="@{repeating_weapons2_$X_attacknum2}" class="sheet-short"></td>
             <td><input type="text" name="attr_attackadj2" title="@{repeating_weapons2_$X_attackadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_ThAC02" title="@{repeating_weapons2_$X_ThAC02}" class="sheet-small" value="20"></td>
-            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+[[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]])]] using their @{weaponname2}">Hit</button></td>
+            <td><button type="roll" name="roll_hit12" title="%{repeating_weapons2_$X_hit12}" value="/em hits an AC of [[@{ThAC02}-(1d20cs>@{crit-thresh2}+([[(@{attackadj2})+((@{strengthhit})*@{strbonus2})+((@{dexmissile})*@{dexbonus2})+(@{pb-attack})+(@{sr-attack})+(@{mr-attack})+(@{lr-attack})+(@{banded-mail2})+(@{brigandine2})+(@{chainmail-bronzeplate2})+(@{field-plate2})+(@{full-plate2})+(@{leather-hide-padded2})+(@{plate-mail2})+(@{ring-mail2})+(@{scale-mail2})+(@{splint-mail2})+(@{studded-leather2})+(?{Misc. bonus|0})]]))]] using their @{weaponname2}">Hit</button></td>
             <td><input type="text" name="attr_crit-thresh2" title="@{repeating_weapons2_$X_crit-thresh2}" class="sheet-small" value="20"></td>
             <td><input type="text" name="attr_range2" title="@{repeating_weapons2_$X_range2}" class="sheet-mintext"></td>
             <td><input type="text" name="attr_size2" title="@{repeating_weapons2_$X_size2}" class="sheet-small"></td>
@@ -1729,9 +1729,9 @@
             <td><input type="text" name="attr_ammoname" title="@{ammoname}" class="sheet-middle"></td>
             <td><input type="text" name="attr_damadj2" title="@{damadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_damsm2" title="@{damsm2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm2" title="%{attacksm2}" value="/em rolls [[@{damsm2}+[[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]]]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attacksm2" title="%{attacksm2}" value="/em rolls [[@{damsm2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="text" name="attr_daml2" title="@{daml2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl2" title="%{attackl2}" value="/em rolls [[@{daml2}+[[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]]]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attackl2" title="%{attackl2}" value="/em rolls [[@{daml2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="number" name="attr_ammoremain" title="@{ammoremain}" class="sheet-short"></td>
     </tr>
     </table>
@@ -1751,9 +1751,9 @@
             <td><input type="text" name="attr_ammoname" title="@{repeating_ammo_$X_ammoname}" class="sheet-middle"></td>
             <td><input type="text" name="attr_damadj2" title="@{repeating_ammo_$X_damadj2}" class="sheet-short" value="0"></td>
             <td><input type="text" name="attr_damsm2" title="@{repeating_ammo_$X_damsm2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attacksm2" title="%{repeating_ammo_$X_attacksm2}" value="/em rolls [[@{damsm2}+(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attacksm2" title="%{repeating_ammo_$X_attacksm2}" value="/em rolls [[@{damsm2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="text" name="attr_daml2" title="@{repeating_ammo_$X_daml2}" class="sheet-short"></td>
-            <td><button type="roll" name="roll_attackl2" title="%{repeating_ammo_$X_attackl2}" value="/em rolls [[@{daml2}+(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]] damage using their @{ammoname}!"></button></td>
+            <td><button type="roll" name="roll_attackl2" title="%{repeating_ammo_$X_attackl2}" value="/em rolls [[@{daml2}+([[(@{damadj2})+((@{strengthdmg})*@{strbonus3})+(?{Misc. bonus|0})]])]] damage using their @{ammoname}!"></button></td>
             <td><input type="number" name="attr_ammoremain" title="@{repeating_ammo_$X_ammoremain}" class="sheet-short"></td>
     </tr>
 </table>
@@ -1793,7 +1793,7 @@
             <th class="sheet-default-header">Leather Armor</th>
             <th class="sheet-default-header">Bonus</th>
             <th class="sheet-default-header" colspan="2">Total</th>
-            <th class="sheet-default-header">Penelty</th>
+            <th class="sheet-default-header">Penalty</th>
             <th class="sheet-default-header">Total</th>
             <th class="sheet-default-header"><input type="text" name="attr_armorname" title="@{armorname}" class="sheet-rogue" placeholder="Studded Leather" /></th>
     </tr>
