--- a/Dark Heresy Advanced 2nd Edition/darkheresy2ndedition.html
+++ b/Dark Heresy Advanced 2nd Edition/darkheresy2ndedition.html
@@ -3591,7 +3591,7 @@ on("change:repeating_rangedweapons", function() {
 						<div class="sheet-item" style="width: 23%;"><input name="attr_PsyDamage" type="text" /></div>
 						<div class="sheet-item" style="width: 7%;"><span data-i18n="penetration-u">Pen:</span></div>
 						<div class="sheet-item" style="width: 23%;"><input name="attr_PsyPen" type="text" /></div>
-						<div class="sheet-item sheet-redbgns" style="width: 17%;"><button name="roll_PsyDamage" type="roll" value="/me does [[@{PsyPowerDamage}]] damage! (Pen: @{PsyPen})"> <span data-i18n="damage-u">Damage</span> </button></div>
+						<div class="sheet-item sheet-redbgns" style="width: 17%;"><button name="roll_PsyDamage" type="roll" value="/me does [[@{PsyDamage}]] damage! (Pen: @{PsyPen})"> <span data-i18n="damage-u">Damage</span> </button></div>
 						<div class="sheet-item sheet-redbgns" style="width: 15%;"><button name="roll_PsyHit" type="roll" value="!roll40k @{character_name}, ?{Focus Power Characteristic | Willpower,@{Willpower} | Perception,@{Perception} | Psyniscience,@{PsyniscienceCharacteristic}},  [[(@{PsyRating} - ?{Psy Use?|1}) *10 + ?{Modifier|0}]]"> <span data-i18n="hit-u">Hit</span> </button></div>
 					</div>
 					<div><textarea name="attr_PsyPowersEffectRe"></textarea></div>
@@ -3643,7 +3643,7 @@ on("change:repeating_rangedweapons", function() {
 						<div class="sheet-item" style="width: 23%;"><input name="attr_PsyPowerDamageRi" type="text" /></div>
 						<div class="sheet-item" style="width: 7%;"><span data-i18n="penetration-u">Pen:</span></div>
 						<div class="sheet-item" style="width: 23%;"><input name="attr_PsyPenRi" type="text" /></div>
-						<div class="sheet-item sheet-redbgns" style="width: 17%;"><button name="roll_PsyDamageRi" type="roll" value="/me does [[@{PsyPowerDamage2}]] damage! (Pen: @{PsyPen2})"> <span data-i18n="damage-u">Damage</span> </button></div>
+						<div class="sheet-item sheet-redbgns" style="width: 17%;"><button name="roll_PsyDamageRi" type="roll" value="/me does [[@{PsyPowerDamageRi}]] damage! (Pen: @{PsyPenRi})"> <span data-i18n="damage-u">Damage</span> </button></div>
 						<div class="sheet-item sheet-redbgns" style="width: 15%;"><button name="roll_PsyHitRi" type="roll" value="!roll40k @{character_name}, ?{Focus Power Characteristic | Willpower,@{Willpower} | Perception,@{Perception} | Psyniscience,@{PsyniscienceCharacteristic}},  [[(@{PsyRating} - ?{Psy Use?|1}) *10 + ?{Modifier|0}]]"> <span data-i18n="hit-u">Hit</span> </button></div>
 					</div>
 					<div>
