--- a/Ironcrunch/src/html/Ironcrunch.html
+++ b/Ironcrunch/src/html/Ironcrunch.html
@@ -30,6 +30,12 @@
           <option value="1">1</option>
           <option value="0">0</option>
         </select>
+        <div class="sheet-health-status-box">
+          <h3 class="sheet-health-max">MAX</h3>
+          <h3><span name="attr_max_health"></span>
+            <input class="sheet-hide" type="text" name="attr_max_health" value="20"/>
+          </h3>
+        </div>
       </div>
       <div>
         <h2>Spirit</h2><img/>
@@ -115,29 +121,29 @@
 <div class="sheet-summary sheet-hide">
   <div class="sheet-stats">
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[1d6+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{edge}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Edge" name="rollEdge" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +edge}} {{action=[[d12+@{edge}+(?{Modifier|0})]]}} {{negate1=[[1+@{edge}+(?{Modifier|0})]]}} {{negate2=[[2+@{edge}+(?{Modifier|0})]]}} {{negate3=[[3+@{edge}+(?{Modifier|0})]]}} {{negate4=[[4+@{edge}+(?{Modifier|0})]]}} {{negate5=[[5+@{edge}+(?{Modifier|0})]]}} {{negate6=[[6+@{edge}+(?{Modifier|0})]]}} {{negate7=[[7+@{edge}+(?{Modifier|0})]]}} {{negate8=[[8+@{edge}+(?{Modifier|0})]]}} {{negate9=[[9+@{edge}+(?{Modifier|0})]]}} {{negate10=[[10+@{edge}+(?{Modifier|0})]]}} {{negate11=[[11+@{edge}+(?{Modifier|0})]]}} {{negate12=[[12+@{edge}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{edge}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{edge}]]}}"></button>
       <h3 class="sheet-stats-title">EDGE</h3>
-      <input class="sheet-stats-input" type="text" name="attr_edge" placeholder="grace" value=""/>
+      <input class="sheet-stats-input" type="text" name="attr_edge" value="1"/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Heart" name="rollHeart" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +heart}} {{action=[[1d6+@{heart}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{heart}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{heart}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Heart" name="rollHeart" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +heart}} {{action=[[d12+@{heart}+(?{Modifier|0})]]}} {{negate1=[[1+@{heart}+(?{Modifier|0})]]}} {{negate2=[[2+@{heart}+(?{Modifier|0})]]}} {{negate3=[[3+@{heart}+(?{Modifier|0})]]}} {{negate4=[[4+@{heart}+(?{Modifier|0})]]}} {{negate5=[[5+@{heart}+(?{Modifier|0})]]}} {{negate6=[[6+@{heart}+(?{Modifier|0})]]}} {{negate7=[[7+@{heart}+(?{Modifier|0})]]}} {{negate8=[[8+@{heart}+(?{Modifier|0})]]}} {{negate9=[[9+@{heart}+(?{Modifier|0})]]}} {{negate10=[[10+@{heart}+(?{Modifier|0})]]}} {{negate11=[[11+@{heart}+(?{Modifier|0})]]}} {{negate12=[[12+@{heart}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{heart}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{heart}]]}}"></button>
       <h3 class="sheet-stats-title">HEART</h3>
-      <input class="sheet-stats-input" type="text" name="attr_heart" placeholder="soul" value=""/>
+      <input class="sheet-stats-input" type="text" name="attr_heart" value="1"/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Iron" name="rollIron" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[1d6+@{iron}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{iron}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{iron}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Iron" name="rollIron" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +iron}} {{action=[[d12+@{iron}+(?{Modifier|0})]]}} {{negate1=[[1+@{iron}+(?{Modifier|0})]]}} {{negate2=[[2+@{iron}+(?{Modifier|0})]]}} {{negate3=[[3+@{iron}+(?{Modifier|0})]]}} {{negate4=[[4+@{iron}+(?{Modifier|0})]]}} {{negate5=[[5+@{iron}+(?{Modifier|0})]]}} {{negate6=[[6+@{iron}+(?{Modifier|0})]]}} {{negate7=[[7+@{iron}+(?{Modifier|0})]]}} {{negate8=[[8+@{iron}+(?{Modifier|0})]]}} {{negate9=[[9+@{iron}+(?{Modifier|0})]]}} {{negate10=[[10+@{iron}+(?{Modifier|0})]]}} {{negate11=[[11+@{iron}+(?{Modifier|0})]]}} {{negate12=[[12+@{iron}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{iron}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{iron}]]}}"></button>
       <h3 class="sheet-stats-title">IRON</h3>
-      <input class="sheet-stats-input" type="text" name="attr_iron" placeholder="body" value=""/>
+      <input class="sheet-stats-input" type="text" name="attr_iron" value="1"/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Shadow" name="rollShadow" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[1d6+@{shadow}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{shadow}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{shadow}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Shadow" name="rollShadow" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +shadow}} {{action=[[d12+@{shadow}+(?{Modifier|0})]]}} {{negate1=[[1+@{shadow}+(?{Modifier|0})]]}} {{negate2=[[2+@{shadow}+(?{Modifier|0})]]}} {{negate3=[[3+@{shadow}+(?{Modifier|0})]]}} {{negate4=[[4+@{shadow}+(?{Modifier|0})]]}} {{negate5=[[5+@{shadow}+(?{Modifier|0})]]}} {{negate6=[[6+@{shadow}+(?{Modifier|0})]]}} {{negate7=[[7+@{shadow}+(?{Modifier|0})]]}} {{negate8=[[8+@{shadow}+(?{Modifier|0})]]}} {{negate9=[[9+@{shadow}+(?{Modifier|0})]]}} {{negate10=[[10+@{shadow}+(?{Modifier|0})]]}} {{negate11=[[11+@{shadow}+(?{Modifier|0})]]}} {{negate12=[[12+@{shadow}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{shadow}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{shadow}]]}}"></button>
       <h3 class="sheet-stats-title">SHADOW</h3>
-      <input class="sheet-stats-input" type="text" name="attr_shadow" placeholder="guile" value=""/>
+      <input class="sheet-stats-input" type="text" name="attr_shadow" value="1"/>
     </div>
     <div class="sheet-stat">
-      <button type="roll" title="Roll +Wits" name="rollWits" value="&amp;{template:ironcrunch} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[1d6+@{wits}+(?{Modifier|0})]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}} {{momentum=[[@{momentum}]]}}  {{modifiers=[[@{#{}}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{wits}]]}} {{fake_roll=[[0-(@{momentum})]]}} {{momentum_cancel=[[(@{wits}+(?{Modifier|0}))-(@{momentum})]]}}"></button>
+      <button type="roll" title="Roll +Wits" name="rollWits" value="&amp;{template:ironcrunch_moves} {{header=@{character_name}}} {{name=Roll +wits}} {{action=[[d12+@{wits}+(?{Modifier|0})]]}} {{negate1=[[1+@{wits}+(?{Modifier|0})]]}} {{negate2=[[2+@{wits}+(?{Modifier|0})]]}} {{negate3=[[3+@{wits}+(?{Modifier|0})]]}} {{negate4=[[4+@{wits}+(?{Modifier|0})]]}} {{negate5=[[5+@{wits}+(?{Modifier|0})]]}} {{negate6=[[6+@{wits}+(?{Modifier|0})]]}} {{negate7=[[7+@{wits}+(?{Modifier|0})]]}} {{negate8=[[8+@{wits}+(?{Modifier|0})]]}} {{negate9=[[9+@{wits}+(?{Modifier|0})]]}} {{negate10=[[10+@{wits}+(?{Modifier|0})]]}} {{negate11=[[11+@{wits}+(?{Modifier|0})]]}} {{negate12=[[12+@{wits}+(?{Modifier|0})]]}} {{challenge1=[[d20]]}} {{challenge2=[[d20]]}} {{momentum=[[@{momentum}]]}} {{modifiers=[[@{wits}+(?{Modifier|0})]]}} {{add=[[(?{Modifier|0})]]}} {{stat=[[@{wits}]]}}"></button>
       <h3 class="sheet-stats-title">WITS</h3>
-      <input class="sheet-stats-input" type="text" name="attr_wits" placeholder="mind" value=""/>
+      <input class="sheet-stats-input" type="text" name="attr_wits" value="1"/>
     </div>
   </div>
 </div>
@@ -571,11 +577,265 @@
       <td class="sheet-subheader" colspan="2">{{header}}</td>
     </tr>
     <tr>
-      <th colspan="2">{{name}}  </th>
-    </tr>
+      <th colspan="2">{{name}}</th>
+    </tr>{{#rollLess() momentum 0}}
+    {{#rollTotal() momentum -1}}
+    {{#rollTotal() action negate1 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate1 }}
+    {{#rollTotal() action negate2 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate2 }}
+    {{/rollTotal() momentum -1}}
+    {{#rollTotal() momentum -2}}
+    {{#rollTotal() action negate3 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate3 }}
+    {{#rollTotal() action negate4 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate4 }}
+    {{/rollTotal() momentum -2}}
+    {{#rollTotal() momentum -3}}
+    {{#rollTotal() action negate5 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate5 }}
+    {{#rollTotal() action negate6 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate6 }}
+    {{/rollTotal() momentum -3}}
+    {{#rollTotal() momentum -4}}
+    {{#rollTotal() action negate7 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate7 }}
+    {{#rollTotal() action negate8 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate8 }}
+    {{/rollTotal() momentum -4}}
+    {{#rollTotal() momentum -5}}
+    {{#rollTotal() action negate9 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate9 }}
+    {{#rollTotal() action negate10 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate10 }}
+    {{/rollTotal() momentum -5}}
+    {{#rollTotal() momentum -6}}
+    {{#rollTotal() action negate11 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate11 }}
+    {{#rollTotal() action negate12 }}
+      <tr>
+        <td>Previous Action Score:</td>
+        <td>{{action}}</td>
+      </tr>
+      <tr>
+        <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+      </tr>
+      <tr>
+        <td>Stat + Add:</td>
+        <td>{{stat}} + {{add}}</td>
+      </tr>
+      <tr>
+        <td>New Action Score:</td>
+        <td>{{modifiers}}</td>
+      </tr>
+      <tr>
+        <td><span>Challenge Dice:</span></td>
+        <td><span>{{challenge1}} {{challenge2}}</span></td>
+      </tr>{{/rollTotal() action negate12 }}
+    {{/rollTotal() momentum -6}}
+    {{/rollLess() momentum 0}}
+    {{#^rollLess() momentum 0}}
     <tr>
-      <td>span Action Score: </td>
-      <td>span {{action}}</td>
+      <td><span>Action Score: </span></td>
+      <td><span>{{action}}</span></td>
     </tr>
     <tr>
       <td><span>Challenge Dice: </span></td>
@@ -612,6 +872,7 @@
     </tr>{{/^rollGreater() action challenge2}}
     {{/^rollTotal() challenge1 challenge2}}
     {{/^rollGreater() action challenge1}}
+    {{/^rollLess() momentum 0}}
     {{/action}}
     {{#vow}}
     <tr>
@@ -697,6 +958,11 @@
           if (numDebilities===1) setAttrs({ momentum_reset: 1});
           if (numDebilities>1) setAttrs({ momentum_reset: 0});
       });
+  });
+  //Calculate Max Health
+  on('change:iron', function() {
+    console.log('i ran 1')
+    updateMaxHealth();
   });
   //Cannot increase Health while Wounded
   //Health reaching 0 marks Wounded
@@ -823,4 +1089,13 @@
           });
       });
   });
+  var updateMaxHealth = function() {
+    console.log('i ran 2')
+    getAttrs(['iron'], function(v) {
+      let max_health = (v.iron*4)+16
+      setAttrs({
+        max_health: max_health
+      });
+    });
+  };
 </script>
