--- a/Ironcrunch/src/html/roll-templates/moves.html
+++ b/Ironcrunch/src/html/roll-templates/moves.html
@@ -4,11 +4,265 @@
     <td class="sheet-subheader" colspan="2">{{header}}</td>
   </tr>
   <tr>
-    <th colspan="2">{{name}}  </th>
+    <th colspan="2">{{name}}</th>
+  </tr>{{#rollLess() momentum 0}}
+  {{#rollTotal() momentum -1}}
+  {{#rollTotal() action negate1 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
   </tr>
   <tr>
-    <td>span Action Score: </td>
-    <td>span {{action}}</td>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate1 }}
+  {{#rollTotal() action negate2 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate2 }}
+  {{/rollTotal() momentum -1}}
+  {{#rollTotal() momentum -2}}
+  {{#rollTotal() action negate3 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate3 }}
+  {{#rollTotal() action negate4 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate4 }}
+  {{/rollTotal() momentum -2}}
+  {{#rollTotal() momentum -3}}
+  {{#rollTotal() action negate5 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate5 }}
+  {{#rollTotal() action negate6 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate6 }}
+  {{/rollTotal() momentum -3}}
+  {{#rollTotal() momentum -4}}
+  {{#rollTotal() action negate7 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate7 }}
+  {{#rollTotal() action negate8 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate8 }}
+  {{/rollTotal() momentum -4}}
+  {{#rollTotal() momentum -5}}
+  {{#rollTotal() action negate9 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate9 }}
+  {{#rollTotal() action negate10 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate10 }}
+  {{/rollTotal() momentum -5}}
+  {{#rollTotal() momentum -6}}
+  {{#rollTotal() action negate11 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate11 }}
+  {{#rollTotal() action negate12 }}
+  <tr>
+    <td>Previous Action Score:</td>
+    <td>{{action}}</td>
+  </tr>
+  <tr>
+    <td class="sheet-subfooter sheet-alert" colspan="2">Action die cancelled for matching negative momentum.</td>
+  </tr>
+  <tr>
+    <td>Stat + Add:</td>
+    <td>{{stat}} + {{add}}</td>
+  </tr>
+  <tr>
+    <td>New Action Score:</td>
+    <td>{{modifiers}}</td>
+  </tr>
+  <tr>
+    <td><span>Challenge Dice:</span></td>
+    <td><span>{{challenge1}} {{challenge2}}</span></td>
+  </tr>{{/rollTotal() action negate12 }}
+  {{/rollTotal() momentum -6}}
+  {{/rollLess() momentum 0}}
+  {{#^rollLess() momentum 0}}
+  <tr>
+    <td><span>Action Score: </span></td>
+    <td><span>{{action}}</span></td>
   </tr>
   <tr>
     <td><span>Challenge Dice: </span></td>
@@ -45,6 +299,7 @@
   </tr>{{/^rollGreater() action challenge2}}
   {{/^rollTotal() challenge1 challenge2}}
   {{/^rollGreater() action challenge1}}
+  {{/^rollLess() momentum 0}}
   {{/action}}
   {{#vow}}
   <tr>
