--- a/Ironcrunch/src/html/workers/Ironcrunch.html
+++ b/Ironcrunch/src/html/workers/Ironcrunch.html
@@ -22,6 +22,11 @@
           if (numDebilities>1) setAttrs({ momentum_reset: 0});
       });
   });
+  //Calculate Max Health
+  on('change:iron', function() {
+    console.log('i ran 1')
+    updateMaxHealth();
+  });
   //Cannot increase Health while Wounded
   //Health reaching 0 marks Wounded
   on('change:health', function(eventinfo) {
@@ -147,4 +152,13 @@
           });
       });
   });
+  var updateMaxHealth = function() {
+    console.log('i ran 2')
+    getAttrs(['iron'], function(v) {
+      let max_health = (v.iron*4)+16
+      setAttrs({
+        max_health: max_health
+      });
+    });
+  };
 </script>
